New in 5.0.1 version

   * vdW-DF functional and DFT-D extended to CP (experimental)
   * PWscf: Noncollinear/spin-orbit Berry Phases (experimental)
   * New functionals: SOGGA, M06L (courtesy of Yves Ferro)

Fixed in 5.0.1 version

   * Funny frequencies from matdyn.x if masses were read from file
   * Stress calculation in parallel execution was wrong in the
     Gamma-only case when ScaLAPACK was present (v.5.0 only) 
   * Misc compilation problems with old compilers 

New in 5.0 version

   * More ways of calculating electron-phonon coefficients.
   * Full DFT+U scheme (with J and additional parameters) implemented.
     Should work also for fully-relativistic calculations.
   * band parallelization for Green function sum in EXX (memory replication).

Incompatible changes in 5.0 version:

   * Postprocessing codes dos.x, bands.x, projwfc.x, now use
     namelist &dos, &bands, &projwfc respectively, instead of &inputpp
   * Directory reorganization: whole packages into subdirectories,
     almost nothing is in the same directory where it used to be. 
   * atomic masses in the code are in amu unless otherwise stated
   * Options 'cubic'/'hexagonal' to CELL_PARAMETERS removed: it is no 
     longer useful, the code will anyway find the correct sym.ops.
   * Options 'bohr'/'angstrom'/'alat' to CELL_PARAMETERS implemented
   * -DEXX no longer required for exact exchange or hybrid functionals
   * PHonon: input variable 'elph' replaced by 'electron_phonon'

Fixed in 5.0 version

   * Missing checks for unimplemented cases with electric fields
   * CP with electric fields wasn't working any longer in parallel
     due to an unallocated variable
   * VERY NASTY bug: exchange-correlation keyword 'PW91' was incorrectly 
     interpreted (PZ LDA instead of PW) in all 4.3.x versions
   * A few glitches when the standard input is copied to file
   * PW: LDA+U crash in the final step of a vc-relax run, due to a
     premature deallocation of a variable